2005-03-30 20:04  voc

	* Initial version of the new, object-oriented vdccm